Bug fixes. Backface-visibility for flicker.

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ body {
 	width: 100%;
 	height: 100%;
 	border-radius: 10px;
+	backface-visibility: hidden;
 }
 
 .card .front {
